--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "html-resource-loader",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "Loads resources from HTML using rules.",
   "main": "dist/lib/index.js",
   "private": true,
@@ -23,6 +23,7 @@
     "file-loader": "^3.0.1",
     "htmlparser2": "^3.10.1",
     "loader-utils": "^1.2.3",
+    "raw-loader": "^1.0.0",
     "typescript": "^3.4.5",
     "url-loader": "^1.1.2",
     "webpack": "^4.31.0",
