--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   },
   "author": "Erya",
   "license": "ISC",
+  "dependencies": {
+    "htmlparser2": "^3.10.1"
+  },
   "devDependencies": {
     "@types/htmlparser2": "^3.10.0",
     "@types/loader-utils": "^1.1.3",
@@ -21,7 +24,6 @@
     "@types/webpack": "^4.4.31",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^3.0.1",
-    "htmlparser2": "^3.10.1",
     "loader-utils": "^1.2.3",
     "raw-loader": "^1.0.0",
     "typescript": "^3.4.5",
