--- a/package.json
+++ b/package.json
@@ -1,32 +1,36 @@
 {
-  "name": "html-resource-loader",
-  "version": "2.3.0",
-  "description": "Loads resources from HTML using rules.",
+  "name": "@such-code/html-resource-loader",
+  "version": "2.3.1",
+  "description": "Webpack loader to loads resources from HTML using set of user defined rules.",
   "main": "dist/lib/index.js",
-  "private": true,
+  "types": "dist/lib/index.d.ts",
   "scripts": {
-    "tsc": "tsc",
-    "webpack": "webpack",
-    "build": "npm run tsc",
-    "build:test": "tsc; webpack --mode development",
-    "build:test:debug": "tsc; node $NODE_DEBUG_OPTION --inspect-brk $(npm bin)/webpack --mode development"
+    "cleanup": "del ./dist",
+    "build": "npm run cleanup; tsc",
+    "build:test": "npm run build; webpack --mode development",
+    "build:test:debug": "npm run build; node --inspect-brk $(npm bin)/webpack --mode development"
   },
-  "author": "Erya",
-  "license": "ISC",
+  "author": "Erik Podrez <erya14@gmail.com>",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/such-code/html-resource-loader.git"
+  },
+  "license": "MIT",
   "dependencies": {
-    "htmlparser2": "^3.10.1"
+    "htmlparser2": "^4.1.0",
+    "domhandler": "^3.0.0"
   },
   "devDependencies": {
-    "@types/htmlparser2": "^3.10.1",
+    "@such-code/html-parser-utils": "^1.0.1",
     "@types/loader-utils": "^1.1.3",
-    "@types/node": "^8.10.60",
-    "@types/uglify-js": "^3.9.0",
+    "@types/node": "^12.12.39",
     "@types/webpack": "^4.41.12",
+    "del-cli": "^3.0.0",
     "file-loader": "^3.0.1",
     "loader-utils": "^1.4.0",
-    "raw-loader": "^1.0.0",
+    "raw-loader": "^4.0.1",
     "typescript": "^3.8.3",
-    "url-loader": "^1.1.2",
+    "url-loader": "^4.1.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
   }
