--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@such-code/html-resource-loader",
-  "version": "2.3.1",
+  "version": "2.3.2",
   "description": "Webpack loader to loads resources from HTML using set of user defined rules.",
   "main": "dist/lib/index.js",
   "types": "dist/lib/index.d.ts",
@@ -29,6 +29,7 @@
     "file-loader": "^3.0.1",
     "loader-utils": "^1.4.0",
     "raw-loader": "^4.0.1",
+    "suppress-chunks-webpack-plugin": "^1.0.6",
     "typescript": "^3.8.3",
     "url-loader": "^4.1.0",
     "webpack": "^4.43.0",
