--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "@such-code/html-resource-loader",
-  "version": "2.3.5",
+  "version": "2.3.6",
   "description": "Webpack loader to loads resources from HTML using set of user defined rules.",
   "main": "dist/lib/index.js",
   "types": "dist/lib/index.d.ts",
   "scripts": {
     "cleanup": "del ./dist",
     "build": "npm run cleanup; tsc",
-    "build:test": "npm run build; webpack --mode development",
-    "build:test:debug": "npm run build; node --inspect-brk $(npm bin)/webpack --mode development"
+    "build:test": "npm run build; webpack --config ./src/test/webpack.config.js --mode development",
+    "build:test:debug": "npm run build; node --inspect-brk $(npm bin)/webpack --config ./src/test/webpack.config.js --mode development"
   },
   "author": "Erik Podrez <erya14@gmail.com>",
   "repository": {
@@ -17,20 +17,21 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@such-code/html-parser-utils": "^1.0.2",
-    "htmlparser2": "^4.1.0",
-    "domhandler": "^3.0.0"
+    "@such-code/html-parser-utils": "^1.1.0",
+    "domhandler": "^3.0.0",
+    "htmlparser2": "^4.1.0"
   },
   "devDependencies": {
+    "@such-code/content-url-loader": "^1.0.0",
     "@types/loader-utils": "^1.1.3",
     "@types/node": "^12.12.39",
-    "@types/webpack": "^4.41.12",
-    "del-cli": "^3.0.0",
+    "@types/webpack": "^4.41.13",
+    "del-cli": "^3.0.1",
     "file-loader": "^3.0.1",
     "loader-utils": "^1.4.0",
     "raw-loader": "^4.0.1",
     "suppress-chunks-webpack-plugin": "^1.0.6",
-    "typescript": "^3.8.3",
+    "typescript": "^3.9.2",
     "url-loader": "^4.1.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
