--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "module": "commonjs",
     "moduleResolution": "node",
     "outDir": "dist/lib",
-    "sourceMap": false,
+    "sourceMap": true,
     "strict": false,
     "target": "es6",
     "typeRoots": [
